TFP-4867 regler for avslag av perioder dersom påbegynt ny svp/fp-sak (#105)
* TFP-4867 regler for avslag av perioder dersom påbegynt ny svp/fp-sak

* NOJIRA Fersk nare